--- a/package.json
+++ b/package.json
@@ -1,18 +1,31 @@
 {
-  "scripts": {
-    "test": "jest",
-    "test:watch": "jest --watch"
+  "name": "print-ts-files",
+  "version": "1.0.0",
+  "description": "TypeScriptファイルの内容を表示するツール",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
+  "bin": {
+    "print-ts-files": "./dist/index.js"
   },
+  "scripts": {
+    "build": "tsc",
+    "test": "jest",
+    "prepare": "npm run build"
+  },
+  "keywords": ["typescript", "file", "printer"],
+  "author": "sofuetakuma112",
+  "license": "MIT",
   "dependencies": {
-    "typescript": "^5.6.3"
+    "typescript": "^4.x.x"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.5",
-    "@types/node": "^20.8.0",
-    "dprint": "^0.47.5",
-    "jest": "^29.7.0",
-    "memfs": "^4.5.0",
-    "ts-jest": "^29.1.1",
-    "typescript": "^5.2.2"
+    "@types/node": "^16.x.x",
+    "@types/jest": "^27.x.x",
+    "jest": "^27.x.x",
+    "ts-jest": "^27.x.x",
+    "memfs": "^3.x.x"
   }
 }
